log

Wed 13 Mar 2024 09:11:30 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
3379e04
Wed 13 Mar 2024 09:14:40 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e383cd1
Wed 13 Mar 2024 09:14:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b23fe93
Wed 13 Mar 2024 09:15:25 PM UTC: 
 exercises.c | 12 +-----------
 1 file changed, 1 insertion(+), 11 deletions(-)
 tests:  0|7
total_score: 0/70
bec0f61
Wed 13 Mar 2024 09:16:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
02b206d
Wed 13 Mar 2024 09:16:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: expected expression before ‘]’ token
   14 |   int max = arr[];
      |                 ^
Compilation failed
944c27d
Wed 13 Mar 2024 09:17:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
8c3f75e
Wed 13 Mar 2024 09:20:05 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:1: error: expected expression before ‘}’ token
   34 | }
      | ^
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
15e7b5e
Fri 15 Mar 2024 09:10:59 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:16:3: error: expected ‘,’ or ‘;’ before ‘for’
   16 |   for (int i = 1 ; i < size ; i++)
      |   ^~~
exercises.c:16:20: error: ‘i’ undeclared (first use in this function)
   16 |   for (int i = 1 ; i < size ; i++)
      |                    ^
exercises.c:16:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:34: error: expected ‘;’ before ‘)’ token
   16 |   for (int i = 1 ; i < size ; i++)
      |                                  ^
      |                                  ;
exercises.c:16:34: error: expected statement before ‘)’ token
Compilation failed
c068133
Fri 15 Mar 2024 09:12:39 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:21:3: error: expected ‘,’ or ‘;’ before ‘for’
   21 |   for (int i = 1 ; i < size ; i++)
      |   ^~~
exercises.c:21:20: error: ‘i’ undeclared (first use in this function)
   21 |   for (int i = 1 ; i < size ; i++)
      |                    ^
exercises.c:21:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:21:34: error: expected ‘;’ before ‘)’ token
   21 |   for (int i = 1 ; i < size ; i++)
      |                                  ^
      |                                  ;
exercises.c:21:34: error: expected statement before ‘)’ token
Compilation failed
9227167
Fri 15 Mar 2024 09:13:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3f90182
Fri 15 Mar 2024 09:17:27 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:43:7: error: unused variable ‘start’ [-Werror=unused-variable]
   43 |   int start = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
3a04ac9
Fri 15 Mar 2024 09:22:53 PM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
3010f6b
Fri 15 Mar 2024 09:24:16 PM UTC: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 20/70
00ce0ed
Fri 15 Mar 2024 09:24:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6688dd7
Fri 15 Mar 2024 09:25:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
3960ac7
Fri 15 Mar 2024 09:25:31 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
c3feb92
Fri 15 Mar 2024 09:29:28 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
520826e
Fri 15 Mar 2024 09:30:42 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|4
total_score: 30/70
9a85c29
